--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             iframe.setAttribute('allow', 'encrypted-media; autoplay');
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('scrolling', 'yes');
-            iframe.setAttribute('src', 'hhttps://tiogol.com/vivo/canal.php?stream=dsports');
+            iframe.setAttribute('src', 'https://tiogol.com/vivo/canal.php?stream=telefe');
             document.getElementById('playerContainer').appendChild(iframe);
         }
 
